objects/redwing__Learning_Equivalency__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Equivalency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equivalency</label>
        <referenceTo>redwing__Equivalency__c</referenceTo>
        <relationshipLabel>Learning Equivalencies</relationshipLabel>
        <relationshipName>Learning_Equivalencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Learning__c.redwing__Current_Published_Version_Formula__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Equivalencies</relationshipLabel>
        <relationshipName>Learning_Equivalencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Plan__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Equivalencies</relationshipLabel>
        <relationshipName>Learning_Equivalencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Track__c.redwing__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Equivalencies</relationshipLabel>
        <relationshipName>Learning_Equivalencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Equivalency</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Learning Equivalency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Equivalencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>